# Paper-Scanner

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  weipu_api_selectolax.py
.github/workflows/: docker.yml
app/: .dockerignore  Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml
app/app/: globals.css  layout.tsx  providers.tsx
app/app/(protected)/: layout.tsx  page.tsx
app/app/(protected)/articles/[id]/: page.tsx
app/app/(protected)/weekly-updates/: page.tsx
app/app/api/auth/login/: route.ts
app/app/login/: login-client.tsx
app/components/feature/: results-list.tsx  search-bar.tsx  sidebar.tsx  weekly-updates-fab.tsx
app/components/ui/: popover.tsx
app/config/: auth.example.yaml
app/lib/: api.ts  auth-config.ts  auth.ts  citation.ts
data/: meta.csv
data/meta/: fms.csv  fms_chinese.csv  fms_cn.csv  fms_en.csv  fms_global.csv  utd24.csv
data/push/: subscriptions.example.json
docs/: BROWZINE_API_DOCUMENTATION.md  api.md  browzine_api.md  database.md  development.md  docker.md  notify.md  weipu_api.md
libs/simple/: README.md
scripts/: __init__.py  api.py  index.py  notify.py
scripts/api/: __init__.py  app.py  dependencies.py  main.py  models.py  pagination.py  weipu_resolver.py
scripts/api/queries/: __init__.py  articles.py  issues.py  journals.py  meta.py  weekly.py
scripts/api/routes/: __init__.py  articles.py  health.py  issues.py  journals.py  meta.py  weekly.py
scripts/browzine/: __init__.py  client.py  validation.py
scripts/index/: __init__.py  changes.py  fetcher.py  main.py  transforms.py  workers.py
scripts/index/db/: __init__.py  client.py  fts.py  operations.py  retry.py  schema.py  writer.py
scripts/notify/: __init__.py  ai_selector.py  candidates.py  changes.py  delivery.py  main.py  message.py  models.py  pushplus.py  selection.py  state.py  subscriptions.py  workflow.py
scripts/shared/: __init__.py  constants.py  converters.py  db_path.py  sqlite_ext.py
scripts/utility/: __init__.py  fill.py  metadata.py  valid.py  weipu_api.py
scripts/weipu/: __init__.py  client.py  des.py  parsers.py
